--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CALCULATOR </title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="calcfavicon.png" type="image/x-icon">
+    <meta name="google-site-verification" content="EGUReeK_X6-NM2ic-eg3LhGRqXsQNKaP1Ja9heJqvtA" />
   </head>
   <body>
     <div class="container">
