--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <button class="btn-operator" id="cleared">C</button>
           <button class="btn-operator" id="/">&divide;</button>
           <button class="btn-operator" id="*">&times;</button>
-          <button class="btn-operator" id="backspace">&#x2190;</button>
+          <button class="btn-operator-b" id="backspace">&#x2190;</button>
 
           <button class="btn-number" id="7">7</button>
           <button class="btn-number" id="8">8</button>
